[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "fitzgen's art"
documentation = "https://docs.rs/fart"
edition = "2018"
license = "MIT/Apache-2.0"
name = "fart"
readme = "./README.md"
repository = "https://github.com/fitzgen/fart"
version = "0.3.0"

[dependencies]
euclid = "0.20.1"
failure = "0.1.5"
fart-2d-geom = { version = "=0.3.0", path = "crates/2d-geom" }
fart-aabb = { version = "=0.3.0", path = "crates/aabb" }
fart-utils = { version = "=0.3.0", path = "crates/utils" }
id-arena = "2.2.1"
lazy_static = "1.3.0"
noise = "0.5.1"
num-traits = "0.2.6"
rand = "0.6.5"
svg = "0.5.12"

[workspace]
members = ["crates/cli"]

[patch.crates-io]
# tide = { git = "https://github.com/rustasync/tide.git" }
http-service = { git = "https://github.com/rustasync/http-service.git" }

# Just for https://github.com/rustasync/tide/pull/301
[patch.crates-io.tide]
git = "https://github.com/ibaryshnikov/tide.git"
rev = "0eb69efc0ef8e5684bbabfff6cccdaf82189688e"

[patch.crates-io.route-recognizer]
git = "https://github.com/miller-time/route-recognizer.rs"
rev = "d7bc06d2dc58a2c59d8f2cfbee2ab23b8188700d"
