[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "2-dimensional geometry algorithms built on top of `euclid`."
documentation = "https://docs.rs/partial-min-max"
edition = "2018"
license = "MIT/Apache-2.0"
name = "fart-2d-geom"
readme = "./README.md"
repository = "https://github.com/fitzgen/fart/tree/master/crates/2d-geom"
version = "0.4.0"

[dependencies]
euclid = "0.20.7"
fart-aabb = { version = "=0.4.0", path = "../aabb" }
fart-utils = { version = "=0.4.0", path = "../utils" }
num-traits = "0.2.6"
partial-min-max = { version = "=0.4.0", path = "../partial-min-max" }
rand = "0.6.5"

[dev-dependencies]
quickcheck = "0.8.3"
