[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "CLI tool for the `fart` framework"
edition = "2018"
license = "MIT/Apache-2.0"
name = "fart-cli"
readme = "../../README.md"
repository = "https://github.com/fitzgen/fart"
version = "0.4.0"

[[bin]]
name = "fart"
path = "src/main.rs"

[dependencies]
async-std = "1.5.0"
chrono = "0.4.11"
failure = "0.1.8"
notify = "4.0.15"
structopt = "0.3.15"
tide = "0.6.0"
futures = "0.3.4"
serde = "1.0.114"
serde_json = "1.0.55"
bytes = "0.5.5"
http-service = "0.5.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
quickcheck = "0.9.2"
tempfile = "3.1.0"
