[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "CLI tool for the `fart` framework"
edition = "2018"
license = "MIT/Apache-2.0"
name = "fart-cli"
readme = "../../README.md"
repository = "https://github.com/fitzgen/fart"
version = "0.4.0"

[[bin]]
name = "fart"
path = "src/main.rs"

[dependencies]
async-std = "1.5.0"
chrono = "0.4.19"
failure = "0.1.8"
notify = "4.0.15"
structopt = "0.3.21"
tide = "0.6.0"
futures = "0.3.4"
serde = "1.0.119"
serde_json = "1.0.61"
bytes = "1.0.1"
http-service = "0.5.0"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.8"
quickcheck = "1.0.2"
tempfile = "3.2.0"
